Doc/force-app/main/default/objects/Item_Master_Product__c/Item_Master_Product__c.object-meta.xml
<CustomObject>
    <label>Item Master Product</label>
    <nameField>
        <label>Product Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Master Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>