Doc/force-app/main/default/objects/Item_Master_Product__c/fields/Allocation_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Rollup__c</fullName>
    <label>% Allocation Rollup</label>
    <summarizedField>ACV_Allocation__c.Percent_Allocation__c</summarizedField>
    <summaryForeignKey>ACV_Allocation__c.Item_Master_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>