Doc/force-app/main/default/objects/Item_Master_Product__c/fields/Exempt_from_Magic_Script__c.field-meta.xml
<CustomField>
    <fullName>Exempt_from_Magic_Script__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempt from Magic Script</label>
    <type>Checkbox</type>
</CustomField>