Doc/force-app/main/default/objects/Item_Master_Product__c/fields/GearsetExternalId__c.field-meta.xml
<CustomField>
    <fullName>GearsetExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Gearset External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>