Doc/force-app/main/default/objects/Item_Master_Product__c/fields/Income_Account__c.field-meta.xml
<CustomField>
    <fullName>Income_Account__c</fullName>
    <description>Custom Field built according to BIZ-51029
Updated field label as part of BIZ-60799</description>
    <label>NetSuite Income Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7510</fullName>
                <label>Conferences</label>
            </value>
            <value>
                <fullName>4020</fullName>
                <label>Maintenance &amp; Support</label>
            </value>
            <value>
                <fullName>4190</fullName>
                <label>Other - Contract Breakage Fee</label>
            </value>
            <value>
                <fullName>4221</fullName>
                <label>Professional Services - FF DealCloud</label>
            </value>
            <value>
                <fullName>4030</fullName>
                <label>Professional Services - Fixed Fee</label>
            </value>
            <value>
                <fullName>4031</fullName>
                <label>Professional Services - Reimbursed Expenses</label>
            </value>
            <value>
                <fullName>4037</fullName>
                <label>Professional Services - Strategic Consulting Fixed Fee</label>
            </value>
            <value>
                <fullName>4033</fullName>
                <label>Professional Services - Strategic Consulting T&amp;M</label>
            </value>
            <value>
                <fullName>4032</fullName>
                <label>Professional Services - T&amp;M</label>
            </value>
            <value>
                <fullName>4220</fullName>
                <label>Professional Services - T&amp;M DealCloud</label>
            </value>
            <value>
                <fullName>4210</fullName>
                <label>Professional Services Implementation - T&amp;M DealCloud</label>
            </value>
            <value>
                <fullName>4200</fullName>
                <label>SaaS</label>
            </value>
            <value>
                <fullName>4400</fullName>
                <label>Third Party Product Revenue</label>
            </value>
            <value>
                <fullName>4110</fullName>
                <label>SaaS DealCloud</label>
            </value>
            <value>
                <fullName>1940</fullName>
                <label>Undeposited Funds</label>
            </value>
            <value>
                <fullName>4103</fullName>
                <label>Professional Services ADJ</label>
            </value>
            <value>
                <fullName>4015</fullName>
                <label>Subscription Services</label>
            </value>
            <value>
                <fullName>4012</fullName>
                <label>Subscription Services - License (ARM)</label>
            </value>
            <value>
                <fullName>4013</fullName>
                <label>Subscription Services - Support (ARM)</label>
            </value>
            <value>
                <fullName>4016</fullName>
                <label>Subscription Services - Usage Based</label>
            </value>
            <value>
                <fullName>4042</fullName>
                <label>PS - Strategic Consulting and Partner Referral</label>
            </value>
            <value>
                <fullName>4130</fullName>
                <label>SaaS Premium Support</label>
            </value>
            <value>
                <fullName>4223</fullName>
                <label>Managed Services Fixed Fee - Professional Services</label>
            </value>
            <value>
                <fullName>0001 Sales : Direct Sales : Licensing</fullName>
                <isActive>false</isActive>
                <label>0001 Sales : Direct Sales : Licensing</label>
            </value>
            <value>
                <fullName>0003 Sales : Direct Sales</fullName>
                <isActive>false</isActive>
                <label>0003 Sales : Direct Sales</label>
            </value>
            <value>
                <fullName>2610 Other Liabilities : Sales Tax Payable : Avalara Sales Taxes Payable</fullName>
                <isActive>false</isActive>
                <label>2610 Other Liabilities : Sales Tax Payable : Avalara Sales Taxes Payable</label>
            </value>
            <value>
                <fullName>2615 Other Liabilities : Sales Tax Payable : Sales Tax Payable</fullName>
                <isActive>false</isActive>
                <label>2615 Other Liabilities : Sales Tax Payable : Sales Tax Payable</label>
            </value>
            <value>
                <fullName>4000 Sales</fullName>
                <isActive>false</isActive>
                <label>4000 Sales</label>
            </value>
            <value>
                <fullName>4010 Sales : Software Perpetual Licenses</fullName>
                <isActive>false</isActive>
                <label>4010 Sales : Software Perpetual Licenses</label>
            </value>
            <value>
                <fullName>4011 Sales : Software Perpetual Licenses : Shipping and Handling</fullName>
                <isActive>false</isActive>
                <label>4011 Sales : Software Perpetual Licenses : Shipping and Handling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>