Doc/force-app/main/default/objects/Item_Master_Product__c/fields/Intapp_Item_Master_Number__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Item_Master_Number__c</fullName>
    <formula>Intapp_Item_Master_Number_Prefix__c&amp;&quot;-&quot;&amp;RIGHT(Name,LEN(Name)-3)</formula>
    <label>Intapp Item Master Number</label>
    <type>Text</type>
</CustomField>