Doc/force-app/main/default/objects/Item_Master_Product__c/fields/NetSuite_Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Billing_Schedule__c</fullName>
    <description>Created as a part of BIZ-60799</description>
    <label>NetSuite Billing Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proserve Billing Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>