Doc/force-app/main/default/objects/Item_Master_Product__c/fields/NetSuite_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Internal_Id__c</fullName>
    <description>Custom field as per BIZ-51029</description>
    <label>NetSuite Internal Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>