Doc/force-app/main/default/objects/Item_Master_Product__c/fields/NetSuite_Item_Type_For_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Item_Type_For_Invoicing__c</fullName>
    <description>Created as a part of BIZ-60799</description>
    <label>NetSuite Item Type For Invoicing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>One-time</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>