Doc/force-app/main/default/objects/Item_Master_Product__c/fields/NetSuite_Product_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Product_Line_ID__c</fullName>
    <description>BIZ-65811 - Associated Product Line Id</description>
    <formula>Product_LineNew__r.NetSuite_Product_Line_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetSuite Product Line ID</label>
    <type>Text</type>
</CustomField>