Doc/force-app/main/default/objects/Item_Master_Product__c/fields/NetSuite_Type__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Type__c</fullName>
    <description>Created as a part of BIZ-60799</description>
    <label>NetSuite Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other Charge</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Item Group</fullName>
            </value>
            <value>
                <fullName>Kit/Package</fullName>
            </value>
            <value>
                <fullName>Non-inventory Item</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>