Doc/force-app/main/default/objects/Item_Master_Product__c/fields/OpenAir_Billing_Rule__c.field-meta.xml
<CustomField>
    <fullName>OpenAir_Billing_Rule__c</fullName>
    <description>BIZ-60535 - Requirement for OpenAir.</description>
    <label>OpenAir Billing Rule</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Item_Revenue_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Fee % complete</fullName>
            </value>
            <value>
                <fullName>Fixed Fee on date or milestone</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>