Doc/force-app/main/default/objects/Item_Master_Product__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>TEXT(Product_LineNew__r.Simple_Product_Line__c)</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>