Doc/force-app/main/default/objects/Item_Master_Product__c/fields/Revenue_Recognition_Rule__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition_Rule__c</fullName>
    <description>Updated field label as part of BIZ-60799</description>
    <label>NetSuite Revenue Recognition Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default Standard</fullName>
            </value>
            <value>
                <fullName>POB 1 - Subscription Services (on-premise)</fullName>
            </value>
            <value>
                <fullName>POB 2 - Cloud / SaaS</fullName>
            </value>
            <value>
                <fullName>POB 3 - Professional Services Upon Billing</fullName>
            </value>
            <value>
                <fullName>POB 4 - Professional Services</fullName>
            </value>
            <value>
                <fullName>POB 5 - PCS</fullName>
            </value>
            <value>
                <fullName>Default Percent Complete</fullName>
            </value>
            <value>
                <fullName>Default One-Time Direct Posting</fullName>
                <isActive>false</isActive>
                <label>Default One-Time Direct Posting</label>
            </value>
            <value>
                <fullName>POB 1 - Upfront Posting</fullName>
                <isActive>false</isActive>
                <label>POB 1 - Upfront Posting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>