Doc/force-app/main/default/objects/Item_Master_Product__c/fields/Sync_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>Sync_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of BIZ-51029.</description>
    <label>Sync NetSuite</label>
    <type>Checkbox</type>
</CustomField>