Doc/force-app/main/default/objects/Item_Master_Product__c/fields/TaxCode__c.field-meta.xml
<CustomField>
    <fullName>TaxCode__c</fullName>
    <description>Custom field as per BIZ-51029</description>
    <inlineHelpText>Identifying code from Avalara that indicates it belongs to a certain product taxability.</inlineHelpText>
    <label>Avalara Tax Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>